tests/compile_fail/for_initializer_type_mismatch/source.c
int main(void) {
    for (int *p = 1; ; ) {
    }
    return 0;
}
